--- a/app/src/main/res/layout/activity_sheet_uz.xml
+++ b/app/src/main/res/layout/activity_sheet_uz.xml
@@ -95,8 +95,9 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="70dp"
+        android:translationX="310dp"
+        android:translationY="90dp"
+
         />
 
     <ImageButton
@@ -104,9 +105,9 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="70dp"
-        />
+        android:translationX="940dp"
+        android:translationY="90dp" />
+
     // Columna de Respuestas
 
     <ImageButton
@@ -114,8 +115,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_K"
-        android:translationX="1050dp"
-        android:translationY="200dp"
+        android:translationX="1057dp"
+        android:translationY="216dp"
         app:srcCompat="@drawable/png22"
         />
 
@@ -125,8 +126,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_L"
-        android:translationX="1050dp"
-        android:translationY="300dp"
+        android:translationX="1057dp"
+        android:translationY="312dp"
         app:srcCompat="@drawable/png23"
         />
 
@@ -135,8 +136,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_M"
-        android:translationX="1050dp"
-        android:translationY="400dp"
+        android:translationX="1057dp"
+        android:translationY="410dp"
         app:srcCompat="@drawable/png25"
         />
 
@@ -148,8 +149,8 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="false"
         android:contentDescription="@string/Symbol_N"
-        android:translationX="1050dp"
-        android:translationY="500dp"
+        android:translationX="1057dp"
+        android:translationY="504dp"
         app:srcCompat="@drawable/png26"
         />
 
@@ -159,7 +160,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_Ñ"
-        android:translationX="1050dp"
+        android:translationX="1057dp"
         android:translationY="600dp"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
@@ -216,8 +217,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="232dp"
+        android:translationX="310dp"
+        android:translationY="242dp"
         />
 
     <ImageButton
@@ -225,8 +226,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="232dp"
+        android:translationX="940dp"
+        android:translationY="242dp"
         />
 
     // 2º Intento
@@ -278,16 +279,16 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="325dp"
+        android:translationX="940dp"
+        android:translationY="332dp"
         />
     <ImageButton
         android:id="@+id/imageButton46"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="325dp"
+        android:translationX="310dp"
+        android:translationY="332dp"
         />
 
     // 3º intento
@@ -342,16 +343,16 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="415dp"
+        android:translationX="940dp"
+        android:translationY="423dp"
         />
     <ImageButton
         android:id="@+id/imageButton48"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="415dp"
+        android:translationX="310dp"
+        android:translationY="423dp"
         />
 
     // 4º Intento
@@ -405,16 +406,16 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="500dp"
+        android:translationX="940dp"
+        android:translationY="515dp"
         />
     <ImageButton
         android:id="@+id/imageButton50"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="500dp"
+        android:translationX="310dp"
+        android:translationY="515dp"
         />
 
     // 5º Intento
@@ -467,8 +468,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="597dp"
+        android:translationX="940dp"
+        android:translationY="610dp"
         />
 
     <ImageButton
@@ -476,14 +477,14 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="597dp"
+        android:translationX="310dp"
+        android:translationY="610dp"
         />
 
     // Iniciar la prueba
 
     <ImageButton
-        android:id="@+id/Iniciar_Test"
+        android:id="@+id/Start_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -493,7 +494,7 @@
         />
 
     <ImageButton
-        android:id="@+id/Iniciar_Test_off"
+        android:id="@+id/Stop_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -584,36 +585,18 @@
         android:translationX="50dp"
         android:translationY="530dp" />
 
-    <RadioGroup
-        android:id="@+id/mode_program"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
-        android:translationX="50dp"
-        android:translationY="170dp"
-        android:textSize="20dp">
 
 
-        <RadioButton
-            android:id="@+id/Chek"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Check_Mode" />
-
-        <RadioButton
-            android:id="@+id/Test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Working_Mode" />
-
-    </RadioGroup>
 
     <RadioGroup
         android:id="@+id/Test_Type"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
+        android:layout_width="246dp"
+        android:layout_height="207dp"
+        android:textSize="20dp"
         android:translationX="50dp"
-        android:translationY="310dp"
-        android:textSize="20dp">
+        android:translationY="210dp"
+        tools:layout_editor_absoluteX="-6dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <RadioButton
             android:id="@+id/Test_Control"
@@ -624,13 +607,13 @@
         <RadioButton
             android:id="@+id/Test_V_Onom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="79dp"
             android:text="@string/Test_Experimen_Onom" />
 
         <RadioButton
             android:id="@+id/Test_V_Number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:text="@string/Test_Experiment_Numb" />
 
     </RadioGroup>
