--- a/app/src/main/res/layout/activity_sheet_ae.xml
+++ b/app/src/main/res/layout/activity_sheet_ae.xml
@@ -91,8 +91,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="80dp"
+        android:translationX="310dp"
+        android:translationY="90dp"
 
         />
 
@@ -101,8 +101,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="80dp" />
+        android:translationX="940dp"
+        android:translationY="90dp" />
 
     // Columna de Respuestas
 
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_A"
         android:translationX="1060dp"
-        android:translationY="215dp"
+        android:translationY="216dp"
         app:srcCompat="@drawable/png1" />
 
 
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_C"
         android:translationX="1060dp"
-        android:translationY="405dp"
+        android:translationY="410dp"
         app:srcCompat="@drawable/png3" />
 
 
@@ -142,7 +142,7 @@
         android:adjustViewBounds="false"
         android:contentDescription="@string/Symbol_D"
         android:translationX="1060dp"
-        android:translationY="500dp"
+        android:translationY="504dp"
         app:srcCompat="@drawable/png4" />
 
 
@@ -152,7 +152,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_E"
         android:translationX="1060dp"
-        android:translationY="590dp"
+        android:translationY="600dp"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
         app:srcCompat="@drawable/png5" />
@@ -216,8 +216,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="232dp"
+        android:translationX="940dp"
+        android:translationY="242dp"
         android:visibility="invisible" />
 
     // 2º Intento
@@ -269,8 +269,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="325dp"
+        android:translationX="940dp"
+        android:translationY="332dp"
         android:visibility="invisible" />
 
     <ImageButton
@@ -278,8 +278,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="325dp"
+        android:translationX="310dp"
+        android:translationY="332dp"
         android:visibility="invisible" />
 
     // 3º intento
@@ -330,8 +330,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="415dp"
+        android:translationX="940dp"
+        android:translationY="423dp"
         android:visibility="invisible" />
 
     <ImageButton
@@ -339,8 +339,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="415dp"
+        android:translationX="310dp"
+        android:translationY="423dp"
         android:visibility="invisible" />
 
     // 4º Intento
@@ -390,8 +390,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="500dp"
+        android:translationX="940dp"
+        android:translationY="515dp"
         android:visibility="invisible" />
 
     <ImageButton
@@ -399,8 +399,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="500dp"
+        android:translationX="310dp"
+        android:translationY="515dp"
         android:visibility="invisible" />
 
     // 5º Intento
@@ -450,8 +450,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="597dp"
+        android:translationX="940dp"
+        android:translationY="610dp"
         android:visibility="invisible" />
 
     <ImageButton
@@ -459,14 +459,14 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="597dp"
+        android:translationX="310dp"
+        android:translationY="610dp"
         android:visibility="invisible" />
 
     // Iniciar la prueba
 
     <ImageButton
-        android:id="@+id/Iniciar_Test"
+        android:id="@+id/Start_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -475,7 +475,7 @@
         app:srcCompat="@android:drawable/ic_lock_power_off" />
 
     <ImageButton
-        android:id="@+id/Iniciar_Test_off"
+        android:id="@+id/Stop_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -564,36 +564,17 @@
         android:translationX="50dp"
         android:translationY="530dp" />
 
-    <RadioGroup
-        android:id="@+id/mode_program"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
-        android:translationX="50dp"
-        android:translationY="170dp"
-        android:textSize="20dp">
 
-
-        <RadioButton
-            android:id="@+id/Chek"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Check_Mode" />
-
-        <RadioButton
-            android:id="@+id/Test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Working_Mode" />
-
-    </RadioGroup>
 
     <RadioGroup
         android:id="@+id/Test_Type"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
+        android:layout_width="246dp"
+        android:layout_height="207dp"
+        android:textSize="20dp"
         android:translationX="50dp"
-        android:translationY="310dp"
-        android:textSize="20dp">
+        android:translationY="210dp"
+        tools:layout_editor_absoluteX="-6dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <RadioButton
             android:id="@+id/Test_Control"
@@ -604,13 +585,13 @@
         <RadioButton
             android:id="@+id/Test_V_Onom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="79dp"
             android:text="@string/Test_Experimen_Onom" />
 
         <RadioButton
             android:id="@+id/Test_V_Number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:text="@string/Test_Experiment_Numb" />
 
     </RadioGroup>
