--- a/app/src/main/res/layout/activity_sheet_fj.xml
+++ b/app/src/main/res/layout/activity_sheet_fj.xml
@@ -95,8 +95,9 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="70dp"
+        android:translationX="310dp"
+        android:translationY="90dp"
+
         />
 
     <ImageButton
@@ -104,9 +105,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="70dp"
-        />
+        android:translationX="940dp"
+        android:translationY="90dp" />
 
     // Columna de Respuestas
 
@@ -115,8 +115,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_A"
-        android:translationX="1050dp"
-        android:translationY="200dp"
+        android:translationX="1060dp"
+        android:translationY="216dp"
         app:srcCompat="@drawable/png6"
         />
 
@@ -126,8 +126,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_B"
-        android:translationX="1050dp"
-        android:translationY="300dp"
+        android:translationX="1060dp"
+        android:translationY="312dp"
         app:srcCompat="@drawable/png7"
         />
 
@@ -136,8 +136,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_C"
-        android:translationX="1050dp"
-        android:translationY="400dp"
+        android:translationX="1060dp"
+        android:translationY="410dp"
         app:srcCompat="@drawable/png8"
         />
 
@@ -149,8 +149,8 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="false"
         android:contentDescription="@string/Symbol_D"
-        android:translationX="1050dp"
-        android:translationY="500dp"
+        android:translationX="1060dp"
+        android:translationY="504dp"
         app:srcCompat="@drawable/png9"
         />
 
@@ -160,7 +160,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_E"
-        android:translationX="1050dp"
+        android:translationX="1060dp"
         android:translationY="600dp"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
@@ -178,8 +178,7 @@
         app:srcCompat="@drawable/png10"
         android:translationX="375dp"
         android:translationY="232dp"/>
-    //    tools:layout_editor_absoluteX="349dp"
-    //    tools:layout_editor_absoluteY="256dp" />
+
     <ImageButton
         android:id="@+id/imageButton7"
         android:layout_width="wrap_content"
@@ -187,8 +186,7 @@
         app:srcCompat="@drawable/png9"
         android:translationX="482dp"
         android:translationY="232dp"/>
-    //   tools:layout_editor_absoluteX="349dp"
-    //   tools:layout_editor_absoluteY="256dp" />
+
     <ImageButton
         android:id="@+id/imageButton8"
         android:layout_width="wrap_content"
@@ -196,8 +194,7 @@
         app:srcCompat="@drawable/png6"
         android:translationX="595dp"
         android:translationY="232dp"/>
-    //  tools:layout_editor_absoluteX="349dp"
-    //  tools:layout_editor_absoluteY="256dp" />
+
     <ImageButton
         android:id="@+id/imageButton9"
         android:layout_width="wrap_content"
@@ -205,8 +202,6 @@
         app:srcCompat="@drawable/png7"
         android:translationX="710dp"
         android:translationY="232dp"/>
-    //  tools:layout_editor_absoluteX="349dp"
-    //  tools:layout_editor_absoluteY="256dp" />
 
     <ImageButton
         android:id="@+id/imageButton10"
@@ -214,13 +209,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/png8"
         android:translationX="825dp"
-        android:translationY="232dp"/><![CDATA[
-     //   tools:layout_editor_absoluteX="349dp"
-     //   tools:layout_editor_absoluteY="256dp" />
-
-
-
-    ]]>
+        android:translationY="232dp"/>
 
     <ImageButton
         android:id="@+id/imageButton42"
@@ -236,8 +225,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="232dp"
+        android:translationX="940dp"
+        android:translationY="242dp"
         />
 
     // 2º Intento
@@ -257,8 +246,7 @@
         app:srcCompat="@drawable/png7"
         android:translationX="482dp"
         android:translationY="325dp"/>
-    //  tools:layout_editor_absoluteX="349dp"
-    //  tools:layout_editor_absoluteY="256dp" />
+
     <ImageButton
         android:id="@+id/imageButton13"
         android:layout_width="wrap_content"
@@ -266,17 +254,14 @@
         app:srcCompat="@drawable/png10"
         android:translationX="595dp"
         android:translationY="327dp"/>
-    //   tools:layout_editor_absoluteX="349dp"
-    tools:layout_editor_absoluteY="256dp" />
+
     <ImageButton
         android:id="@+id/imageButton14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/png6"
         android:translationX="710dp"
-        android:translationY="325dp"
-        />//   tools:layout_editor_absoluteX="349dp"
-    //   tools:layout_editor_absoluteY="256dp" />
+        android:translationY="325dp" />
 
     <ImageButton
         android:id="@+id/imageButton15"
@@ -284,25 +269,23 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/png8"
         android:translationX="825dp"
-        android:translationY="325dp"
-        />// tools:layout_editor_absoluteX="349dp"
-    //tools:layout_editor_absoluteY="256dp" />
+        android:translationY="325dp" />
 
     <ImageButton
         android:id="@+id/imageButton45"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="325dp"
+        android:translationX="940dp"
+        android:translationY="332dp"
         />
     <ImageButton
         android:id="@+id/imageButton46"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="325dp"
+        android:translationX="310dp"
+        android:translationY="332dp"
         />
 
     // 3º intento
@@ -361,16 +344,16 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="415dp"
+        android:translationX="940dp"
+        android:translationY="423dp"
         />
     <ImageButton
         android:id="@+id/imageButton48"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="415dp"
+        android:translationX="310dp"
+        android:translationY="423dp"
         />
 
     // 4º Intento
@@ -381,20 +364,15 @@
         android:layout_height="wrap_content"
         android:translationX="370dp"
         android:translationY="500dp"
-        app:srcCompat="@drawable/png8"
-        />
-    //tools:layout_editor_absoluteX="349dp"
-    //    tools:layout_editor_absoluteY="256dp" />
+        app:srcCompat="@drawable/png8" />
+
     <ImageButton
         android:id="@+id/imageButton22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/png6"
         android:translationX="482dp"
-        android:translationY="500dp"
-        />
-    //  tools:layout_editor_absoluteX="349dp"
-    //    tools:layout_editor_absoluteY="256dp" />
+        android:translationY="500dp"  />
 
     <ImageButton
         android:id="@+id/imageButton23"
@@ -404,8 +382,6 @@
         android:translationY="500dp"
         app:srcCompat="@drawable/png7"
         />
-    //   tools:layout_editor_absoluteX="349dp"
-    //    tools:layout_editor_absoluteY="256dp" />
 
     <ImageButton
         android:id="@+id/imageButton24"
@@ -430,16 +406,16 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="500dp"
+        android:translationX="940dp"
+        android:translationY="515dp"
         />
     <ImageButton
         android:id="@+id/imageButton50"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="500dp"
+        android:translationX="310dp"
+        android:translationY="515dp"
         />
 
     // 5º Intento
@@ -451,8 +427,7 @@
         android:translationX="370dp"
         android:translationY="597dp"
         />
-    // tools:layout_editor_absoluteX="349dp"
-    //     tools:layout_editor_absoluteY="256dp" />
+
     <ImageButton
         android:id="@+id/imageButton27"
         android:layout_width="wrap_content"
@@ -493,8 +468,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="597dp"
+        android:translationX="940dp"
+        android:translationY="610dp"
         />
 
     <ImageButton
@@ -502,14 +477,14 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="597dp"
+        android:translationX="310dp"
+        android:translationY="610dp"
         />
 
     // Iniciar la prueba
 
     <ImageButton
-        android:id="@+id/Iniciar_Test"
+        android:id="@+id/Start_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -518,7 +493,7 @@
         app:srcCompat="@android:drawable/ic_lock_power_off"
         />
     <ImageButton
-        android:id="@+id/Iniciar_Test_off"
+        android:id="@+id/Stop_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -608,36 +583,17 @@
         android:translationX="50dp"
         android:translationY="530dp" />
 
-    <RadioGroup
-        android:id="@+id/mode_program"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
-        android:translationX="50dp"
-        android:translationY="170dp"
-        android:textSize="20dp">
 
-
-        <RadioButton
-            android:id="@+id/Chek"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Check_Mode" />
-
-        <RadioButton
-            android:id="@+id/Test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Working_Mode" />
-
-    </RadioGroup>
 
     <RadioGroup
         android:id="@+id/Test_Type"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
+        android:layout_width="246dp"
+        android:layout_height="207dp"
+        android:textSize="20dp"
         android:translationX="50dp"
-        android:translationY="310dp"
-        android:textSize="20dp">
+        android:translationY="210dp"
+        tools:layout_editor_absoluteX="-6dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <RadioButton
             android:id="@+id/Test_Control"
@@ -648,13 +604,13 @@
         <RadioButton
             android:id="@+id/Test_V_Onom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="79dp"
             android:text="@string/Test_Experimen_Onom" />
 
         <RadioButton
             android:id="@+id/Test_V_Number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:text="@string/Test_Experiment_Numb" />
 
     </RadioGroup>
