--- a/app/src/main/res/layout/activity_sheet_ko.xml
+++ b/app/src/main/res/layout/activity_sheet_ko.xml
@@ -34,8 +34,6 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-
-
     <ImageButton
         android:id="@+id/imageButton1"
         android:layout_width="wrap_content"
@@ -45,7 +43,6 @@
         android:translationY="65dp"
         app:srcCompat="@drawable/png11"
         />
-
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -97,8 +94,9 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="325dp"
-        android:translationY="70dp"
+        android:translationX="310dp"
+        android:translationY="90dp"
+
         />
 
     <ImageButton
@@ -106,9 +104,10 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@android:drawable/presence_online"
-        android:translationX="925dp"
-        android:translationY="70dp"
-        />
+        android:translationX="940dp"
+        android:translationY="90dp" />
+
+
     // Columna de Respuestas
 
     <ImageButton
@@ -116,8 +115,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_K"
-        android:translationX="1050dp"
-        android:translationY="200dp"
+        android:translationX="1060dp"
+        android:translationY="216dp"
         app:srcCompat="@drawable/png11"
         />
 
@@ -127,8 +126,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_L"
-        android:translationX="1050dp"
-        android:translationY="300dp"
+        android:translationX="1060dp"
+        android:translationY="312dp"
         app:srcCompat="@drawable/png12"
         />
 
@@ -137,8 +136,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_M"
-        android:translationX="1050dp"
-        android:translationY="400dp"
+        android:translationX="1060dp"
+        android:translationY="410dp"
         app:srcCompat="@drawable/png13"
         />
 
@@ -150,8 +149,8 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="false"
         android:contentDescription="@string/Symbol_N"
-        android:translationX="1050dp"
-        android:translationY="500dp"
+        android:translationX="1060dp"
+        android:translationY="504dp"
         app:srcCompat="@drawable/png14"
         />
 
@@ -161,7 +160,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/Symbol_Ñ"
-        android:translationX="1050dp"
+        android:translationX="1060dp"
         android:translationY="600dp"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
@@ -485,7 +484,7 @@
     // Iniciar la prueba
 
     <ImageButton
-        android:id="@+id/Iniciar_Test"
+        android:id="@+id/Start_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -495,7 +494,7 @@
         />
 
     <ImageButton
-        android:id="@+id/Iniciar_Test_off"
+        android:id="@+id/Stop_test"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:background="@android:drawable/list_selector_background"
@@ -586,36 +585,17 @@
         android:translationX="50dp"
         android:translationY="530dp" />
 
-    <RadioGroup
-        android:id="@+id/mode_program"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
-        android:translationX="50dp"
-        android:translationY="170dp"
-        android:textSize="20dp">
 
-
-        <RadioButton
-            android:id="@+id/Chek"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Check_Mode" />
-
-        <RadioButton
-            android:id="@+id/Test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Working_Mode" />
-
-    </RadioGroup>
 
     <RadioGroup
         android:id="@+id/Test_Type"
-        android:layout_width="241dp"
-        android:layout_height="151dp"
+        android:layout_width="246dp"
+        android:layout_height="207dp"
+        android:textSize="20dp"
         android:translationX="50dp"
-        android:translationY="310dp"
-        android:textSize="20dp">
+        android:translationY="210dp"
+        tools:layout_editor_absoluteX="-6dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <RadioButton
             android:id="@+id/Test_Control"
@@ -626,17 +606,16 @@
         <RadioButton
             android:id="@+id/Test_V_Onom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="79dp"
             android:text="@string/Test_Experimen_Onom" />
 
         <RadioButton
             android:id="@+id/Test_V_Number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:text="@string/Test_Experiment_Numb" />
 
     </RadioGroup>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
