--- a/app/src/main/res/values-es/string.xml
+++ b/app/src/main/res/values-es/string.xml
@@ -77,16 +77,16 @@
     <string name="Symbol_8">Número_8</string>
     <string name="Symbol_9">Número_9</string>
     <string name="Symbol_Ñ">Letra_Ñ</string>
-    <string name="Sheet_AE">Símbolos de A a E</string>
-    <string name="Sheet_FJ">Símbolos de F a J</string>
-    <string name="Sheet_KO">Símbolos de K,L,M,N,O</string>
-    <string name="Sheet_PT">Símbolos de P a T</string>
-    <string name="Sheet_UZ">Símbolos U,V,X,Y,Z</string>
+    <string name="Sheet_AE">Símbolos A, B, C, D, E</string>
+    <string name="Sheet_FJ">Símbolos F, G, H, I, J</string>
+    <string name="Sheet_KO">Símbolos K, L, M, N, O</string>
+    <string name="Sheet_PT">Símbolos P, Q, R, S, T</string>
+    <string name="Sheet_UZ">Símbolos U, V, X, Y, Z</string>
     <string name="Sheet_stressed_vowels">Vocales acentuadas</string>
-    <string name="Sheet_PS">Símbolos de puntuación</string>
+    <string name="Sheet_PS">Símbolos Ñ,W,Ü,´.´,´,´</string>
     <string name="Sheet_04">Números de 0 a 4</string>
     <string name="Sheet_59">Números de 5 a 9</string>
-    <string name="Sheet_Punctuation_Symbol">Signos de puntuación</string>
+    <string name="Sheet_Punctuation_Symbol">Signos Ñ, W, Ü, ´.´ , ´,´</string>
     <string name="Time_test_learning">Test de tiempo de aprenidaje de símbolos braille</string>
     <string name="Symbol_Ü">Letra Ü</string>
     <string name="Symbol_.">Símbolo .</string>
